Adding generators for new forms and actionsgit

--- a/generators/templates/newComponent.tmpl
+++ b/generators/templates/newComponent.tmpl
@@ -1,7 +1,7 @@
 import React, { Component } from 'react';
 import { connect } from 'react-redux';
 
-class {{ componentName }} extends Component {
+class {{ name }} extends Component {
 
     componentDidMount() {
         
@@ -18,4 +18,4 @@ function mapStateToProps(state) {
     return {}; 
 }
 
-export default connect(mapStateToProps, { })({{ componentName }});
+export default connect(mapStateToProps, { })({{ name }});
