--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,8 @@
 @import 'variables';
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
-div {
-    span {
-        font-size: 20px;
+div.example {
+    img {
+        height: 400px;
     }
 }
