--- a/generators/templates/newComponent.tmpl
+++ b/generators/templates/newComponent.tmpl
@@ -3,8 +3,8 @@ import { connect } from 'react-redux';
 
 class {{ name }} extends Component {
 
-    componentDidMount() {
-        
+    constructor(props) {
+        super(props);
     }
     
     render() {
@@ -18,4 +18,6 @@ function mapStateToProps(state) {
     return {}; 
 }
 
-export default connect(mapStateToProps, { })({{ name }});
+const actions = {};
+
+export default connect(mapStateToProps, actions)({{ name }});
